fix(c-side-navigation): Prevent the bottom slot from overflowing the container in mobile

--- a/packages/csc-ui/src/components/c-side-navigation/c-side-navigation.scss
+++ b/packages/csc-ui/src/components/c-side-navigation/c-side-navigation.scss
@@ -45,6 +45,10 @@
     flex-direction: column;
     flex-shrink: 0;
     min-height: 100%;
+
+    &--mobile {
+      min-height: calc(100% - 60px);
+    }
   }
 
   &__content {
